; ModuleID = '/home/carl/AnghaBench/streem/src/extr_core.c_task_loop.c'
source_filename = "/home/carl/AnghaBench/streem/src/extr_core.c_task_loop.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32 }
%struct.strm_task = type { i32 }

@queue = common dso_local global i32 0, align 4
@prod_queue = common dso_local global i32 0, align 4
@stream_count = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i8*)* @task_loop to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @task_loop(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.TYPE_3__*, align 8
  %4 = alloca %struct.strm_task*, align 8
  store i8* %0, i8** %2, align 8
  br label %5

5:                                                ; preds = %46, %1
  %6 = load i32, i32* @queue, align 4
  %7 = call i8* @strm_queue_get(i32 %6)
  %8 = bitcast i8* %7 to %struct.TYPE_3__*
  store %struct.TYPE_3__* %8, %struct.TYPE_3__** %3, align 8
  %9 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %10 = icmp ne %struct.TYPE_3__* %9, null
  br i1 %10, label %15, label %11

11:                                               ; preds = %5
  %12 = load i32, i32* @prod_queue, align 4
  %13 = call i8* @strm_queue_get(i32 %12)
  %14 = bitcast i8* %13 to %struct.TYPE_3__*
  store %struct.TYPE_3__* %14, %struct.TYPE_3__** %3, align 8
  br label %15

15:                                               ; preds = %11, %5
  %16 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %17 = icmp ne %struct.TYPE_3__* %16, null
  br i1 %17, label %18, label %42

18:                                               ; preds = %15
  %19 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %20 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 4
  %22 = call i64 @strm_atomic_cas(i32 %21, i32 0, i32 1)
  %23 = icmp ne i64 %22, 0
  br i1 %23, label %24, label %41

24:                                               ; preds = %18
  br label %25

25:                                               ; preds = %32, %24
  %26 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %27 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %26, i32 0, i32 1
  %28 = load i32, i32* %27, align 4
  %29 = call i8* @strm_queue_get(i32 %28)
  %30 = bitcast i8* %29 to %struct.strm_task*
  store %struct.strm_task* %30, %struct.strm_task** %4, align 8
  %31 = icmp ne %struct.strm_task* %30, null
  br i1 %31, label %32, label %36

32:                                               ; preds = %25
  %33 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %34 = load %struct.strm_task*, %struct.strm_task** %4, align 8
  %35 = call i32 @task_exec(%struct.TYPE_3__* %33, %struct.strm_task* %34)
  br label %25

36:                                               ; preds = %25
  %37 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %38 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %37, i32 0, i32 0
  %39 = load i32, i32* %38, align 4
  %40 = call i64 @strm_atomic_cas(i32 %39, i32 1, i32 0)
  br label %41

41:                                               ; preds = %36, %18
  br label %42

42:                                               ; preds = %41, %15
  %43 = load i64, i64* @stream_count, align 8
  %44 = icmp eq i64 %43, 0
  br i1 %44, label %45, label %46

45:                                               ; preds = %42
  br label %47

46:                                               ; preds = %42
  br label %5

47:                                               ; preds = %45
  ret i8* null
}

declare dso_local i8* @strm_queue_get(i32) #1

declare dso_local i64 @strm_atomic_cas(i32, i32, i32) #1

declare dso_local i32 @task_exec(%struct.TYPE_3__*, %struct.strm_task*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
